<resources>
    <string name="app_name">Albi</string>
    <string name="title_house">House</string>
    <string name="title_add_house">Add house</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="str_login">Login</string>
    <string name="str_register">Register</string>
    <string name="please_enter_your_credentials">Please enter your credentials</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title">Title</string>
    <string name="duedate">Some description</string>
    <string name="number_of_beds">Number of beds</string>
    <string name="username">Username</string>
    <string name="description">description</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Albi user</string>
    <string name="nav_header_subtitle">TODO</string>
    <string name="my_advertisements">My advertisements</string>
    <string name="favourite_advertisements">Favourite advertisements</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="select_the_price">Price</string>
    <string name="upload_photo">Upload photo</string>
    <string name="number_of_rooms">Number of rooms</string>
    <string name="add_description">Add description</string>
    <string name="address">Address</string>
    <string name="upload_advertisement">Upload advertisement</string>
    <string name="edit">Edit</string>
    <string name="rent_price_format">%s Ft/month</string>
    <string name="for_sale_price_format">%s Ft</string>
    <string name="number_of_rooms_format">Nr. of rooms: %s</string>
    <string name="email_format">e-mail: %s</string>
    <string name="phone_number_format">Phone number: %s</string>
    <string name="description_format">Description:\n%s</string>
    <string name="save">Save</string>
    <string name="where_do_you_want_to_search">Where do you want to search ?</string>
    <string name="how_many_rooms_do_you_want">How many rooms do you want ?</string>
    <string name="price">Price</string>
    <string name="value">Value</string>
    <string name="_0_ft">0 Ft</string>
    <string name="show_statistics">Show statistics</string>
    <string name="for_sale">For sale</string>
    <string name="for_rent">For Rent</string>
    <string name="zip_code">Zip Code</string>
    <string name="city">City</string>

    <string-array name="districts_array_name">
        <item>I. kerület</item>
        <item>II. kerület</item>
        <item>III. kerület</item>
        <item>IV. kerület</item>
    </string-array>

    <string-array name="districts_array_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

</resources>
