<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/ivPriority"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:padding="5dp"
        android:src="@drawable/ic_purzen_house_icon" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="132dp"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/title"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvNumberOfBeds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitle"
            android:text="@string/number_of_beds"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvNumberOfBeds"
            android:text="@string/description"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="top"
            android:text="@string/price"
            android:textSize="15sp" />

    </RelativeLayout>

</LinearLayout>