<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="250dp" />

    <EditText
        android:id="@+id/etPriceSingle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/price"
        android:enabled="false"
        android:inputType="numberDecimal"
        android:textColor="@drawable/custom_edittext"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etNumberOfRoomsSingle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:inputType="numberDecimal"
        android:textColor="@drawable/custom_edittext"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etDescriptionSingle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:textColor="@drawable/custom_edittext"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etEmailSingle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:textColor="@drawable/custom_edittext"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etPhoneNumberSingle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:textColor="@drawable/custom_edittext"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etZipCodeSingle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:enabled="false"
            android:inputType="numberDecimal"
            android:textColor="@drawable/custom_edittext"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etCitySingle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:enabled="false"
            android:textColor="@drawable/custom_edittext"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etAddressSingle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textColor="@drawable/custom_edittext"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/editAdvertisement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="@string/edit" />

        <Button
            android:id="@+id/saveAdvertisement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="@string/save"/>

    </LinearLayout>


</LinearLayout>